--- a/DevFreela.Payments/src/DevFreela.Payments.API/DevFreela.Payments.API.csproj
+++ b/DevFreela.Payments/src/DevFreela.Payments.API/DevFreela.Payments.API.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
